[gd_scene load_steps=8 format=3 uid="uid://bms5b35hj2ian"]

[ext_resource type="Script" path="res://GUI/pause_menu/pause_menu.gd" id="1_g1nml"]
[ext_resource type="Texture2D" uid="uid://1rf5vq74p4ye" path="res://Items/Sprites/items.png" id="2_1j814"]
[ext_resource type="Script" path="res://GUI/pause_menu/inventory/Scripts/inventory_ui.gd" id="3_0xuew"]
[ext_resource type="PackedScene" uid="uid://cji24g13bm6i4" path="res://GUI/pause_menu/inventory/inventory_slot.tscn" id="3_vr4sr"]
[ext_resource type="Resource" uid="uid://b8wucdmxpy1fp" path="res://GUI/pause_menu/inventory/player_inventory.tres" id="4_k2s4e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o440m"]
atlas = ExtResource("2_1j814")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_05sg8"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_o440m")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_g1nml")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 0.596078)

[node name="Label" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -133.0
offset_right = 91.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.638506, 0.747727)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 35
text = "~ Paused ~"

[node name="ItemDescription" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = 17.0
offset_right = 200.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.871068, 0.96261)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.509
anchor_top = 0.5
anchor_right = 0.509
anchor_bottom = 0.5
offset_left = -224.32
offset_top = 85.0
offset_right = -70.32
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.759962, 0.431827)

[node name="btn_save" type="Button" parent="Control/HBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Save"

[node name="btn_load" type="Button" parent="Control/HBoxContainer"]
texture_filter = 2
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Load
"

[node name="PanelContainer" type="PanelContainer" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 214.0
offset_top = 88.0
offset_right = 410.0
offset_bottom = 176.0
scale = Vector2(1.12253, 1.1957)
theme_override_styles/panel = SubResource("StyleBoxTexture_05sg8")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_0xuew")
data = ExtResource("4_k2s4e")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_vr4sr")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_vr4sr")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_vr4sr")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_vr4sr")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_vr4sr")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_vr4sr")]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
